Form kinda responsive

--- a/index.html
+++ b/index.html
@@ -21,18 +21,32 @@
     <div class="right">
         <p>Let's do this!</p>
         <form>
-            <label for="first-name">First name</label>
-            <input type="text">
-            <label for="last-name">Last name</label>
-            <input type="text">
-            <label for="email">Email</label>
-            <input type="email">
-            <label for="phone-number">Phone number</label>
-            <input type="tel">
-            <label for="password">Password</label>
-            <input type="password">
-            <label for="password-conf">Confirm password</label>
-            <input type="password">
+            <ul>
+                <li>
+                    <label for="first-name">first name</label>
+                    <input type="text">
+                </li>
+                <li>
+                    <label for="last-name">last name</label>
+                    <input type="text">
+                </li>
+                <li>
+                    <label for="email">email</label>
+                    <input type="email">
+                </li>
+                <li>
+                    <label for="phone-number">phone number</label>
+                    <input type="tel">
+                </li>
+                <li>
+                    <label for="password">password</label>
+                    <input type="password">
+                </li>
+                <li>
+                    <label for="password-conf">confirm password</label>
+                    <input type="password">
+                </li>
+            </ul>
         </form>
     </div>
 </body>
