--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
             <ul>
                 <li>
                     <label for="first-name">first name</label>
-                    <input type="text">
+                    <input type="text" id="first-name" name="first-name">
                 </li>
                 <li>
                     <label for="last-name">last name</label>
-                    <input type="text">
+                    <input type="text" id="last-name" name="last-name">
                 </li>
                 <li>
                     <label for="email">email</label>
-                    <input type="email">
+                    <input type="email" id="email" name="email">
                 </li>
                 <li>
                     <label for="phone-number">phone number</label>
-                    <input type="tel">
+                    <input type="tel" id="phone-number" name="phone-number">
                 </li>
                 <li>
                     <label for="password">password</label>
-                    <input type="password">
+                    <input type="password" id="password" name="password">
                 </li>
                 <li>
                     <label for="password-conf">confirm password</label>
-                    <input type="password">
+                    <input type="password" id="password-conf" name="password-conf">
                 </li>
             </ul>
         </form>
