Add encouragement text and improve responsiveness

--- a/index.html
+++ b/index.html
@@ -19,35 +19,42 @@
     </div>
     
     <div class="right">
-        <p>Let's do this!</p>
-        <form>
-            <ul>
-                <li>
-                    <label for="first-name">first name</label>
-                    <input type="text" id="first-name" name="first-name">
-                </li>
-                <li>
-                    <label for="last-name">last name</label>
-                    <input type="text" id="last-name" name="last-name">
-                </li>
-                <li>
-                    <label for="email">email</label>
-                    <input type="email" id="email" name="email">
-                </li>
-                <li>
-                    <label for="phone-number">phone number</label>
-                    <input type="tel" id="phone-number" name="phone-number">
-                </li>
-                <li>
-                    <label for="password">password</label>
-                    <input type="password" id="password" name="password">
-                </li>
-                <li>
-                    <label for="password-conf">confirm password</label>
-                    <input type="password" id="password-conf" name="password-conf">
-                </li>
-            </ul>
-        </form>
+        <div class="encourage">
+            <p>Create more of the objects that people love! Save your time and energy by using MHub for fabrication. Drag and drop designs to get immediate quotes. Sign up <em>now</em> to get started.</p>
+            <br>
+            <p>You <em>know</em> that you want to.</p>
+        </div>
+        <div class="action">
+            <p>Let's do this!</p>
+            <form>
+                <ul>
+                    <li>
+                        <label for="first-name">first name</label>
+                        <input type="text" id="first-name" name="first-name">
+                    </li>
+                    <li>
+                        <label for="last-name">last name</label>
+                        <input type="text" id="last-name" name="last-name">
+                    </li>
+                    <li>
+                        <label for="email">email</label>
+                        <input type="email" id="email" name="email">
+                    </li>
+                    <li>
+                        <label for="phone-number">phone number</label>
+                        <input type="tel" id="phone-number" name="phone-number">
+                    </li>
+                    <li>
+                        <label for="password">password</label>
+                        <input type="password" id="password" name="password">
+                    </li>
+                    <li>
+                        <label for="password-conf">confirm password</label>
+                        <input type="password" id="password-conf" name="password-conf">
+                    </li>
+                </ul>
+            </form>
+        </div>
     </div>
 </body>
 </html>
