--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
     <title>MHub Signup</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
             <p>You <em>know</em> that you want to.</p>
         </div>
         <div class="action">
-            <form>
+            <form onsubmit="return validatePassword()">
                 <div class="form-container">
                     <h3>Let's do this!</h3>
                     <ul>
